--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,8 @@
 /*common styles !!!YOU DON'T NEED THEM */
+html, body{
+  width: 100%;
+  height: 100%;
+}
 body {
   font-family: 'Poppins', sans-serif;
   font-weight: 400;
@@ -8,7 +12,7 @@ body {
 }
 
 .container {
-  width: 1100px;
+  width: 100%;
   margin: 50px auto 0;
 }
 .container h1 {
@@ -92,7 +96,7 @@ body {
   transition-duration: 0.3s;
   transition-timing-function: linear;
   transition-delay: 0s;
-  width: 20%;
+  width: 33.33%;
   height: 100%;
   position: relative;
   overflow: hidden;
@@ -159,122 +163,28 @@ body {
   visibility: visible;
 }
 
-/* effect 2 styles */
-
-/*additional styles added by me*/
-.vertical-slider{
-  flex-direction: column;
+.one{
+  background-image: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/694606/eff-1.jpg);
 }
-.vertical-slider .flexbox-slide {
-  width: 100%
+.two{
+  background-image: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/694606/eff-2.jpg);
 }
-.vertical-slider .flexbox-slide:hover {
-  flex-shrink: 0;
-  height: 80%;
-  width: 100% !important;
+.three{
+  background-image: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/694606/eff-3.jpg);
 }
-/*additional styles end*/
-
-.flexbox-slider.flexbox-slider-2 .flexbox-slide .text-block {
-  left: -60px;
+.flexbox-slide{
+  background-size: cover;
 }
-.flexbox-slider.flexbox-slider-2:hover .flexbox-slide:not(:hover):after {
-  transition-property: all;
-  transition-duration: 0.2s;
-  transition-timing-function: linear;
-  transition-delay: 0s;
-  opacity: 1;
-}
-.flexbox-slider.flexbox-slider-2:hover .flexbox-slide:hover .text-block {
-  transition-property: all;
-  transition-duration: 0.3s;
-  transition-timing-function: cubic-bezier(0, 0, 0, 1.82);
-  transition-delay: 0.5s;
-  left: 30px;
-  opacity: 1;
-  visibility: visible;
-}
-
-/* effect 3 styles */
-.flexbox-slider.flexbox-slider-3 .flexbox-slide:after {
-  -webkit-transform: scale(0.5);
-          transform: scale(0.5);
-  -webkit-transform-origin: center center;
-          transform-origin: center center;
-}
-.flexbox-slider.flexbox-slider-3 .flexbox-slide .text-block {
-  -webkit-transform: rotate(-20deg);
-          transform: rotate(-20deg);
-}
-.flexbox-slider.flexbox-slider-3:hover .flexbox-slide:hover:after {
-  transition-property: all;
-  transition-duration: 0.2s;
-  transition-timing-function: linear;
-  transition-delay: 0.4s;
-  -webkit-transform: scale(1);
-          transform: scale(1);
-  opacity: 1;
-  visibility: visible;
-}
-.flexbox-slider.flexbox-slider-3:hover .flexbox-slide:hover .text-block {
-  transition-property: all;
-  transition-duration: 0.2s;
-  transition-timing-function: linear;
-  transition-delay: 0.6s;
-  -webkit-transform: rotate(0deg);
-          transform: rotate(0deg);
-  opacity: 1;
-  visibility: visible;
-}
-
-/* effect 4 styles */
-.flexbox-slider.flexbox-slider-4 .flexbox-slide:after {
-  top: -100%;
-}
-.flexbox-slider.flexbox-slider-4 .flexbox-slide .text-block {
-  -webkit-transform: scale(1.2);
-          transform: scale(1.2);
-}
-.flexbox-slider.flexbox-slider-4:hover .flexbox-slide:not(:hover):after {
-  transition-property: all;
-  transition-duration: 0.2s;
-  transition-timing-function: linear;
-  transition-delay: 0s;
-  top: 0;
-  opacity: 1;
-  visibility: visible;
-}
-.flexbox-slider.flexbox-slider-4:hover .flexbox-slide:hover .text-block {
-  transition-property: all;
-  transition-duration: 0.2s;
-  transition-timing-function: linear;
-  transition-delay: 0.5s;
-  -webkit-transform: scale(1);
-          transform: scale(1);
-  opacity: 1;
-  visibility: visible;
-}
-
-/* effect 5 styles */
-.flexbox-slider.flexbox-slider-5 .flexbox-slide .text-block {
-  -webkit-transform: scale(0.85);
-          transform: scale(0.85);
-}
-.flexbox-slider.flexbox-slider-5:hover .flexbox-slide:hover .text-block {
-  transition-property: all;
-  transition-duration: 0.2s;
-  transition-timing-function: linear;
-  transition-delay: 0.7s;
-  -webkit-transform: scale(1);
-          transform: scale(1);
-  opacity: 1;
-  visibility: visible;
-}
-.flexbox-slider.flexbox-slider-5:hover .flexbox-slide:hover:after {
-  transition-property: all;
-  transition-duration: 0.2s;
-  transition-timing-function: linear;
-  transition-delay: 0.4s;
-  opacity: 1;
-  visibility: visible;
+@media screen and (orientation: portrait) {
+  .flexbox-slider{
+    flex-direction: column;
+  }
+  .flexbox-slider .flexbox-slide {
+    width: 100%
+  }
+  .flexbox-slider .flexbox-slide:hover {
+    flex-shrink: 0;
+    height: 80%;
+    width: 100% !important;
+  }
 }
