--- a/css/style.css
+++ b/css/style.css
@@ -13,28 +13,7 @@ body {
 
 .container {
   width: 100%;
-  margin: 50px auto 0;
-}
-.container h1 {
-  font-size: 25px;
-  text-align: center;
-}
-.container h1 span {
-  position: relative;
-  font-family: 'Merienda', cursive;
-  color: #CA9CE1;
-}
-.container h1 span:after {
-  position: absolute;
-  left: 0;
-  bottom: -10px;
-  content: "~";
-  width: 100%;
-  text-align: center;
-}
-.container .subheader {
-  text-align: center;
-  margin-top: 15px;
+  height: 100%;
 }
 
 .link {
@@ -70,25 +49,21 @@ body {
 
 .slider-containers {
   width: 100%;
-  margin-top: 60px;
+  height: 100%;
 }
-
 .slider-container {
-  margin-bottom: 60px;
+  width: 100%;
+  height: 100%;
 }
 .slider-container h2 {
   text-align: center;
-}
-
-.flexbox-slider {
-  margin-top: 50px;
 }
 
 /*slide styles !!!YOU NEED THEM */
 .flexbox-slider {
   display: flex;
   width: 100%;
-  height: 500px;
+  height: 100%;
   visibility: hidden;
 }
 .flexbox-slider .flexbox-slide {
@@ -174,6 +149,25 @@ body {
 }
 .flexbox-slide{
   background-size: cover;
+}
+.title-container{
+  background-color: lightskyblue;
+  height: 100%;
+  margin-left: 20px;
+  width: 3em;
+}
+.slider-title{
+  text-align: left !important;
+  writing-mode: tb;
+  transform: rotate(180deg);
+  font-family: Open Sans Condensed,sans-serif;
+  font-size: 1.6em !important;
+  font-weight: 700;
+  text-transform: uppercase;
+  line-height: 2em;
+  position: absolute;
+  left: 20px;
+  bottom: 20px;
 }
 @media screen and (orientation: portrait) {
   .flexbox-slider{
