--- a/css/style.css
+++ b/css/style.css
@@ -5,47 +5,12 @@ html, body{
 }
 
 .container {
+  font-size: 16px;
   width: 100%;
   height: 100%;
   padding: 0;
 }
-
-.link {
-  display: flex;
-  justify-content: center;
-  width: 800px;
-  margin: 30px auto 0;
-}
-.link a {
-  transition-property: all;
-  transition-duration: 0.2s;
-  transition-timing-function: linear;
-  transition-delay: 0s;
-  display: flex;
-  align-items: center;
-  flex-shrink: 0;
-  margin-right: 40px;
-  color: inherit;
-  font-size: inherit;
-  text-decoration: none;
-}
-.link a:hover {
-  color: #CA9CE1;
-}
-.link a:last-child {
-  margin-right: 0;
-}
-.link a i {
-  color: #CA9CE1;
-  margin-right: 9px;
-  font-size: 30px;
-}
-
-.slider-containers {
-  width: 100%;
-  height: 100%;
-}
-.slider-container {
+.slider-containers, .slider-container {
   width: 100%;
   height: 100%;
 }
@@ -98,17 +63,11 @@ html, body{
 }
 .flexbox-slider .flexbox-slide .inner-slider {
   position: absolute;
-  bottom: 150px;
+  bottom: 9.375em;
   width: 100%;
-  border-radius: 5px;
-  color: #fff;
   z-index: 4;
   visibility: hidden;
   opacity: 0;
-}
-.flexbox-slider .flexbox-slide .inner-slider h3 {
-  font-size: 20px;
-  font-weight: 700;
 }
 .flexbox-slider:hover .flexbox-slide:hover {
   flex-shrink: 0;
@@ -121,7 +80,7 @@ html, body{
   transition-duration: 0.2s;
   transition-timing-function: linear;
   transition-delay: 0.5s;
-  bottom: 50px;
+  bottom: 3em;
   opacity: 1;
   visibility: visible;
 }
@@ -129,7 +88,6 @@ html, body{
   transition-property: all;
   transition-duration: 0.2s;
   transition-timing-function: linear;
-  /*transition-delay: 0.5s;*/
   opacity: 0;
   visibility: visible;
 }
@@ -155,36 +113,38 @@ html, body{
 .slider-title{
   writing-mode: tb;
   transform: rotate(180deg);
-  font-size: 1.6em !important;
+  font-size: 3em !important;
   font-weight: 700;
-  line-height: 2em;
+  line-height: 1.5em;
   position: absolute;
-  left: 20px;
+  left: .5em;
   bottom: 0;
   background-color: lightskyblue;
   height: 100%;
-  padding-top: 20px;
+  padding: 0;
+  margin: 0;
+  padding-top: .5em;
 }
 .inner-title{
-  font-size: 50px !important;
+  font-size: 3em !important;
   font-weight: 700;
-  line-height: 55px;
+  line-height: 1.5em;
   background-color: lightskyblue;
-  padding-left: 40px;
+  padding-left: .8em;
 }
 .subtitle{
-  font-size: 24px;
-  margin-top: 20px;
+  font-size: 1.5em;
+  margin-top: .83em;
   background-color: rgba(255,255,255,.9);
-  line-height: 40px;
-  padding-left: 40px;
+  line-height: 1.6667em;
+  padding-left: 1.6667em;
 }
 .inner-slider{
   width: 100%;
   left: 0;
 }
 .bold-description{
-    font-weight: 700;
+  font-weight: 700;
 }
 .secondary{
   display: flex;
@@ -193,11 +153,14 @@ html, body{
 .secondary-inner{
   display: inline-block;
 }
+.secondary-inner p{
+  margin: 0;
+}
 .learn-more-btn{
   background: #de7006;
   color: #000;
   font-weight: 700;
-  margin-left: 30%;
+  margin-left: 5em;
 }
 @media screen and (orientation: portrait) {
   .flexbox-slider{
@@ -213,13 +176,13 @@ html, body{
   }
   .slider-title {
     width: 100%;
-    padding-left: 20px;
+    padding-left: .5em;
     left: 0;
-    padding-top: 0px;
+    padding-top: 0;
     writing-mode: lr;
     transform: initial;
-    top: 20px;
+    top: .5em;
     bottom: auto;
-    height: 2em;
+    height: 1.5em;
   }
 }
