--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,9 @@
-/*common styles !!!YOU DON'T NEED THEM */
 html, body{
   width: 100%;
   height: 100%;
 }
-
 .container {
+  /*all em styling is based off this font-size*/
   font-size: 16px;
   width: 100%;
   height: 100%;
@@ -18,13 +17,13 @@ html, body{
   text-align: center;
 }
 
-/*slide styles !!!YOU NEED THEM */
 .flexbox-slider {
   display: flex;
   width: 100%;
   height: 100%;
   visibility: hidden;
 }
+/*handles transition of all properties that change for flexbox-slide*/
 .flexbox-slider .flexbox-slide {
   transition-property: all;
   transition-duration: 0.3s;
@@ -37,30 +36,7 @@ html, body{
   cursor: pointer;
   visibility: visible;
 }
-.flexbox-slider .flexbox-slide:after {
-  position: absolute;
-  top: 0;
-  left: 0;
-  content: "";
-  display: block;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(255, 255, 255, 0.6);
-  z-index: 2;
-  opacity: 0;
-}
-.flexbox-slider .flexbox-slide img {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  height: auto;
-  width: auto;
-  min-width: 100%;
-  min-height: 100%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
-  z-index: 1;
-}
+/*initial position & properties for inner-slide*/
 .flexbox-slider .flexbox-slide .inner-slider {
   position: absolute;
   bottom: 9.375em;
@@ -74,8 +50,8 @@ html, body{
   width: 80%;
 }
 
-/* effect 1 styles */
-.flexbox-slider.flexbox-slider-1:hover .flexbox-slide:hover .inner-slider {
+/*handles transition of all properties that change for inner-slide*/
+.flexbox-slider:hover .flexbox-slide:hover .inner-slider {
   transition-property: all;
   transition-duration: 0.2s;
   transition-timing-function: linear;
@@ -84,7 +60,8 @@ html, body{
   opacity: 1;
   visibility: visible;
 }
-.flexbox-slider.flexbox-slider-1:hover .flexbox-slide:hover .slider-title {
+/*handles transition of all properties that change for slider title*/
+.flexbox-slider:hover .flexbox-slide:hover .slider-title {
   transition-property: all;
   transition-duration: 0.2s;
   transition-timing-function: linear;
@@ -112,7 +89,8 @@ html, body{
 }
 .slider-title{
   writing-mode: tb;
-  transform: rotate(180deg);
+  -webkit-transform: rotate(180deg);
+          transform: rotate(180deg);
   font-size: 3em !important;
   font-weight: 700;
   line-height: 1.5em;
@@ -162,6 +140,7 @@ html, body{
   font-weight: 700;
   margin-left: 5em;
 }
+/*queries for vertical view*/
 @media screen and (orientation: portrait) {
   .flexbox-slider{
     flex-direction: column;
